--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,13 @@
+<!--
+  Title: index.html
+  Author: Richard Krasso
+  Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/16/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/16/23
+  Description: html for the bcrs project
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,6 +19,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/275755438c.js" crossorigin="anonymous"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
